gccida/c1/update_giv_derive
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/update_giv_derive/src/loop.c:6473:31: error: use of undeclared identifier 'machine_mode'
v10 = gen_rtx_fmt_ee( MULT, ( machine_mode)*( _DWORD *)( k + 48), *( rtx *)( j + 72), *( rtx *)( k + 64)); 
                              ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/update_giv_derive/src/loop.c:6480:30: error: use of undeclared identifier 'machine_mode'
v8 = gen_rtx_fmt_ee( PLUS, ( machine_mode)*( _DWORD *)( k + 48), v9, v7); 
                             ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/update_giv_derive/src/obj/loop.o] Error 1
